# guinea

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  conanfile.txt
cmake/: install-config.cmake
examples/hello/: CMakeLists.txt  main.cpp
ext/: CMakeLists.txt
include/: app.hpp  config.hpp  guinea.hpp  guinea_base.hpp  load_lib.hpp  widgets.hpp
include/scoped/: ne.hpp  plot.hpp  scoped.hpp  ui.hpp
src/: CMakeLists.txt  app.cpp  dx11_texture.hpp  gl_texture.hpp  guinea.cpp  guinea_impl.hpp  guinea_sdl2_dx11.cpp  guinea_sdl2_opengl2.cpp  guinea_sdl2_opengl3.cpp  guinea_sdl2_opengl3_emscripten.cpp  guinea_sdl_dx11.cpp  guinea_sdl_opengl2.cpp  guinea_sdl_opengl3.cpp  guinea_sdl_opengl3_emscripten.cpp  guinea_win32_dx11.cpp  load_lib.hpp  stb_image.h  widgets.cpp
src/club/: CMakeLists.txt
src/imgui/: CMakeLists.txt  guinea_config.cpp  guinea_config.hpp
src/md/: CMakeLists.txt
src/ne/: CMakeLists.txt
src/plot/: CMakeLists.txt
